--- a/Traversing JSONs.ipynb
+++ b/Traversing JSONs.ipynb
@@ -67,12 +67,12 @@
     {
      "data": {
       "text/plain": [
-       "{'temp': 284.68,\n",
-       " 'feels_like': 283.3,\n",
-       " 'temp_min': 283.71,\n",
-       " 'temp_max': 285.93,\n",
-       " 'pressure': 1020,\n",
-       " 'humidity': 54}"
+       "{'temp': 282.48,\n",
+       " 'feels_like': 282.48,\n",
+       " 'temp_min': 282.04,\n",
+       " 'temp_max': 283.15,\n",
+       " 'pressure': 1005,\n",
+       " 'humidity': 73}"
       ]
      },
      "execution_count": 6,
@@ -86,17 +86,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 804,\n",
+       "  'main': 'Clouds',\n",
+       "  'description': 'overcast clouds',\n",
+       "  'icon': '04d'}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather_json.get(\"weather\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -0.1257, 'lat': 51.5085},\n",
+       " 'weather': [{'id': 804,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'overcast clouds',\n",
+       "   'icon': '04d'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 282.48,\n",
+       "  'feels_like': 282.48,\n",
+       "  'temp_min': 282.04,\n",
+       "  'temp_max': 283.15,\n",
+       "  'pressure': 1005,\n",
+       "  'humidity': 73},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 0.89, 'deg': 104, 'gust': 2.24},\n",
+       " 'clouds': {'all': 99},\n",
+       " 'dt': 1619596559,\n",
+       " 'sys': {'type': 3,\n",
+       "  'id': 2006068,\n",
+       "  'country': 'GB',\n",
+       "  'sunrise': 1619584662,\n",
+       "  'sunset': 1619637480},\n",
+       " 'timezone': 3600,\n",
+       " 'id': 2643743,\n",
+       " 'name': 'London',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather_json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'overcast clouds'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "city_desc = weather_json[\"weather\"][0][\"description\"]\n",
+    "city_desc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('GB',)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "city_country = weather_json[\"sys\"][\"country\"],\n",
+    "city_country"
+   ]
   },
   {
    "cell_type": "code",
