--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -55,91 +55,166 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Ushuaia</td>\n",
-       "      <td>AR</td>\n",
-       "      <td>2021-04-25 02:13:28</td>\n",
-       "      <td>-54.8000</td>\n",
-       "      <td>-68.3000</td>\n",
-       "      <td>44.60</td>\n",
-       "      <td>76</td>\n",
-       "      <td>20</td>\n",
+       "      <th>567</th>\n",
+       "      <td>567</td>\n",
+       "      <td>Olafsvik</td>\n",
+       "      <td>IS</td>\n",
+       "      <td>2021-04-25 02:19:09</td>\n",
+       "      <td>64.8945</td>\n",
+       "      <td>-23.7142</td>\n",
+       "      <td>41.67</td>\n",
+       "      <td>93</td>\n",
+       "      <td>100</td>\n",
+       "      <td>17.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>568</th>\n",
+       "      <td>568</td>\n",
+       "      <td>Zhangjiakou</td>\n",
+       "      <td>CN</td>\n",
+       "      <td>2021-04-25 02:19:09</td>\n",
+       "      <td>40.8100</td>\n",
+       "      <td>114.8794</td>\n",
+       "      <td>58.59</td>\n",
+       "      <td>52</td>\n",
+       "      <td>100</td>\n",
+       "      <td>10.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>569</th>\n",
+       "      <td>569</td>\n",
+       "      <td>Bulaevo</td>\n",
+       "      <td>KZ</td>\n",
+       "      <td>2021-04-25 02:19:10</td>\n",
+       "      <td>54.9056</td>\n",
+       "      <td>70.4439</td>\n",
+       "      <td>43.05</td>\n",
+       "      <td>46</td>\n",
+       "      <td>100</td>\n",
+       "      <td>14.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>570</th>\n",
+       "      <td>570</td>\n",
+       "      <td>Lerwick</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>2021-04-25 02:19:10</td>\n",
+       "      <td>60.1545</td>\n",
+       "      <td>-1.1494</td>\n",
+       "      <td>39.20</td>\n",
+       "      <td>81</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>571</th>\n",
+       "      <td>571</td>\n",
+       "      <td>Pedernales</td>\n",
+       "      <td>DO</td>\n",
+       "      <td>2021-04-25 02:19:10</td>\n",
+       "      <td>18.0384</td>\n",
+       "      <td>-71.7440</td>\n",
+       "      <td>79.20</td>\n",
+       "      <td>71</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>572</th>\n",
+       "      <td>572</td>\n",
+       "      <td>Ati</td>\n",
+       "      <td>TD</td>\n",
+       "      <td>2021-04-25 02:19:11</td>\n",
+       "      <td>13.2154</td>\n",
+       "      <td>18.3353</td>\n",
+       "      <td>80.24</td>\n",
+       "      <td>43</td>\n",
+       "      <td>68</td>\n",
+       "      <td>9.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>573</th>\n",
+       "      <td>573</td>\n",
+       "      <td>Port Hardy</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>2021-04-25 02:15:10</td>\n",
+       "      <td>50.6996</td>\n",
+       "      <td>-127.4199</td>\n",
+       "      <td>50.00</td>\n",
+       "      <td>81</td>\n",
+       "      <td>90</td>\n",
        "      <td>3.44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Cherskiy</td>\n",
-       "      <td>RU</td>\n",
-       "      <td>2021-04-25 02:14:55</td>\n",
-       "      <td>68.7500</td>\n",
-       "      <td>161.3000</td>\n",
-       "      <td>21.88</td>\n",
-       "      <td>82</td>\n",
+       "      <th>574</th>\n",
+       "      <td>574</td>\n",
+       "      <td>Gambo</td>\n",
+       "      <td>CF</td>\n",
+       "      <td>2021-04-25 02:19:11</td>\n",
+       "      <td>4.6482</td>\n",
+       "      <td>22.2633</td>\n",
+       "      <td>68.07</td>\n",
+       "      <td>98</td>\n",
        "      <td>100</td>\n",
-       "      <td>13.02</td>\n",
+       "      <td>2.19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Atuona</td>\n",
-       "      <td>PF</td>\n",
-       "      <td>2021-04-25 02:15:19</td>\n",
-       "      <td>-9.8000</td>\n",
-       "      <td>-139.0333</td>\n",
-       "      <td>80.80</td>\n",
-       "      <td>73</td>\n",
-       "      <td>62</td>\n",
-       "      <td>16.08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Kapaa</td>\n",
+       "      <th>575</th>\n",
+       "      <td>575</td>\n",
+       "      <td>Nassau</td>\n",
        "      <td>US</td>\n",
-       "      <td>2021-04-25 02:15:43</td>\n",
-       "      <td>22.0752</td>\n",
-       "      <td>-159.3190</td>\n",
-       "      <td>78.80</td>\n",
-       "      <td>65</td>\n",
+       "      <td>2021-04-25 02:19:12</td>\n",
+       "      <td>40.7507</td>\n",
+       "      <td>-73.5829</td>\n",
+       "      <td>59.00</td>\n",
+       "      <td>54</td>\n",
        "      <td>20</td>\n",
-       "      <td>14.97</td>\n",
+       "      <td>5.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Bethel</td>\n",
-       "      <td>US</td>\n",
-       "      <td>2021-04-25 02:15:44</td>\n",
-       "      <td>41.3712</td>\n",
-       "      <td>-73.4140</td>\n",
-       "      <td>55.00</td>\n",
-       "      <td>56</td>\n",
+       "      <th>576</th>\n",
+       "      <td>576</td>\n",
+       "      <td>Arman</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>2021-04-25 02:19:12</td>\n",
+       "      <td>59.7000</td>\n",
+       "      <td>150.1667</td>\n",
+       "      <td>25.54</td>\n",
+       "      <td>58</td>\n",
        "      <td>100</td>\n",
-       "      <td>3.98</td>\n",
+       "      <td>10.25</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   City_ID      City Country                 Date      Lat       Lng  \\\n",
-       "0        0   Ushuaia      AR  2021-04-25 02:13:28 -54.8000  -68.3000   \n",
-       "1        1  Cherskiy      RU  2021-04-25 02:14:55  68.7500  161.3000   \n",
-       "2        2    Atuona      PF  2021-04-25 02:15:19  -9.8000 -139.0333   \n",
-       "3        3     Kapaa      US  2021-04-25 02:15:43  22.0752 -159.3190   \n",
-       "4        4    Bethel      US  2021-04-25 02:15:44  41.3712  -73.4140   \n",
+       "     City_ID         City Country                 Date      Lat       Lng  \\\n",
+       "567      567     Olafsvik      IS  2021-04-25 02:19:09  64.8945  -23.7142   \n",
+       "568      568  Zhangjiakou      CN  2021-04-25 02:19:09  40.8100  114.8794   \n",
+       "569      569      Bulaevo      KZ  2021-04-25 02:19:10  54.9056   70.4439   \n",
+       "570      570      Lerwick      GB  2021-04-25 02:19:10  60.1545   -1.1494   \n",
+       "571      571   Pedernales      DO  2021-04-25 02:19:10  18.0384  -71.7440   \n",
+       "572      572          Ati      TD  2021-04-25 02:19:11  13.2154   18.3353   \n",
+       "573      573   Port Hardy      CA  2021-04-25 02:15:10  50.6996 -127.4199   \n",
+       "574      574        Gambo      CF  2021-04-25 02:19:11   4.6482   22.2633   \n",
+       "575      575       Nassau      US  2021-04-25 02:19:12  40.7507  -73.5829   \n",
+       "576      576        Arman      RU  2021-04-25 02:19:12  59.7000  150.1667   \n",
        "\n",
-       "   Max Temp  Humidity  Cloudiness  Wind Speed  \n",
-       "0     44.60        76          20        3.44  \n",
-       "1     21.88        82         100       13.02  \n",
-       "2     80.80        73          62       16.08  \n",
-       "3     78.80        65          20       14.97  \n",
-       "4     55.00        56         100        3.98  "
+       "     Max Temp  Humidity  Cloudiness  Wind Speed  \n",
+       "567     41.67        93         100       17.31  \n",
+       "568     58.59        52         100       10.58  \n",
+       "569     43.05        46         100       14.83  \n",
+       "570     39.20        81         100        4.61  \n",
+       "571     79.20        71           5        5.21  \n",
+       "572     80.24        43          68        9.10  \n",
+       "573     50.00        81          90        3.44  \n",
+       "574     68.07        98         100        2.19  \n",
+       "575     59.00        54          20        5.75  \n",
+       "576     25.54        58         100       10.25  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +222,7 @@
    "source": [
     "# Store the CSV yo saved created in part one into a DataFrame.\n",
     "city_data_df = pd.read_csv('weather_data/cities.csv')\n",
-    "city_data_df.head()"
+    "city_data_df.tail(10)"
    ]
   },
   {
