--- a/Vacation_Search/Vacation_Search.ipynb
+++ b/Vacation_Search/Vacation_Search.ipynb
@@ -17,8 +17,10 @@
     "import pandas as pd\n",
     "import requests\n",
     "import gmaps\n",
+    "import sys\n",
     "\n",
     "# Import API key\n",
+    "sys.path.insert(0,'..')\n",
     "from config import g_key\n",
     "\n",
     "# Configure gmaps API key\n",
@@ -29,10 +31,134 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Current Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Busselton</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>-33.6500</td>\n",
+       "      <td>115.3333</td>\n",
+       "      <td>62.01</td>\n",
+       "      <td>96</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4.21</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Vaini</td>\n",
+       "      <td>TO</td>\n",
+       "      <td>-21.2000</td>\n",
+       "      <td>-175.2000</td>\n",
+       "      <td>73.40</td>\n",
+       "      <td>100</td>\n",
+       "      <td>75</td>\n",
+       "      <td>1.14</td>\n",
+       "      <td>broken clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Vestmannaeyjar</td>\n",
+       "      <td>IS</td>\n",
+       "      <td>63.4427</td>\n",
+       "      <td>-20.2734</td>\n",
+       "      <td>45.09</td>\n",
+       "      <td>71</td>\n",
+       "      <td>20</td>\n",
+       "      <td>11.81</td>\n",
+       "      <td>few clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Port Alfred</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>-33.5906</td>\n",
+       "      <td>26.8910</td>\n",
+       "      <td>68.52</td>\n",
+       "      <td>77</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15.52</td>\n",
+       "      <td>clear sky</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Cabo San Lucas</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>22.8909</td>\n",
+       "      <td>-109.9124</td>\n",
+       "      <td>75.99</td>\n",
+       "      <td>53</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.75</td>\n",
+       "      <td>clear sky</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City_ID            City Country      Lat       Lng  Max Temp  Humidity  \\\n",
+       "0        0       Busselton      AU -33.6500  115.3333     62.01        96   \n",
+       "1        1           Vaini      TO -21.2000 -175.2000     73.40       100   \n",
+       "2        2  Vestmannaeyjar      IS  63.4427  -20.2734     45.09        71   \n",
+       "3        3     Port Alfred      ZA -33.5906   26.8910     68.52        77   \n",
+       "4        4  Cabo San Lucas      MX  22.8909 -109.9124     75.99        53   \n",
+       "\n",
+       "   Cloudiness  Wind Speed Current Description  \n",
+       "0         100        4.21     overcast clouds  \n",
+       "1          75        1.14       broken clouds  \n",
+       "2          20       11.81          few clouds  \n",
+       "3           4       15.52           clear sky  \n",
+       "4           1        5.75           clear sky  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 1. Import the WeatherPy_database.csv file. \n",
-    "city_data_df = pd.read_csv(\"Weather_Database/WeatherPy_database.csv\")\n",
+    "city_data_df = pd.read_csv(\"../Weather_Database/WeatherPy_Database.csv\")\n",
     "city_data_df.head()"
    ]
   },
@@ -40,27 +166,292 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your desired minimum temperature for your trip?75\n",
+      "What is your desired maximum temperature for your trip?100\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2. Prompt the user to enter minimum and maximum temperature criteria \n"
+    "# 2. Prompt the user to enter minimum and maximum temperature criteria \n",
+    "min_temp = float(input(\"What is your desired minimum temperature for your trip?\"))\n",
+    "max_temp = float(input(\"What is your desired maximum temperature for your trip?\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Current Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Cabo San Lucas</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>22.8909</td>\n",
+       "      <td>-109.9124</td>\n",
+       "      <td>75.99</td>\n",
+       "      <td>53</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.75</td>\n",
+       "      <td>clear sky</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Tikaitnagar</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>26.9500</td>\n",
+       "      <td>81.5833</td>\n",
+       "      <td>94.01</td>\n",
+       "      <td>10</td>\n",
+       "      <td>14</td>\n",
+       "      <td>3.22</td>\n",
+       "      <td>few clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Avarua</td>\n",
+       "      <td>CK</td>\n",
+       "      <td>-21.2078</td>\n",
+       "      <td>-159.7750</td>\n",
+       "      <td>80.60</td>\n",
+       "      <td>83</td>\n",
+       "      <td>20</td>\n",
+       "      <td>6.91</td>\n",
+       "      <td>few clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Kieta</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>-6.2167</td>\n",
+       "      <td>155.6333</td>\n",
+       "      <td>78.49</td>\n",
+       "      <td>80</td>\n",
+       "      <td>95</td>\n",
+       "      <td>3.22</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Belmonte</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>-15.8631</td>\n",
+       "      <td>-38.8828</td>\n",
+       "      <td>82.40</td>\n",
+       "      <td>65</td>\n",
+       "      <td>40</td>\n",
+       "      <td>9.22</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>16</td>\n",
+       "      <td>Kanniyakumari</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>8.0833</td>\n",
+       "      <td>77.5667</td>\n",
+       "      <td>83.82</td>\n",
+       "      <td>78</td>\n",
+       "      <td>45</td>\n",
+       "      <td>13.67</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>20</td>\n",
+       "      <td>Rikitea</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>-23.1203</td>\n",
+       "      <td>-134.9692</td>\n",
+       "      <td>76.03</td>\n",
+       "      <td>71</td>\n",
+       "      <td>19</td>\n",
+       "      <td>9.24</td>\n",
+       "      <td>few clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>21</td>\n",
+       "      <td>Lahij</td>\n",
+       "      <td>YE</td>\n",
+       "      <td>13.1667</td>\n",
+       "      <td>44.5833</td>\n",
+       "      <td>82.56</td>\n",
+       "      <td>56</td>\n",
+       "      <td>69</td>\n",
+       "      <td>7.47</td>\n",
+       "      <td>broken clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>26</td>\n",
+       "      <td>Butaritari</td>\n",
+       "      <td>KI</td>\n",
+       "      <td>3.0707</td>\n",
+       "      <td>172.7902</td>\n",
+       "      <td>82.44</td>\n",
+       "      <td>76</td>\n",
+       "      <td>100</td>\n",
+       "      <td>9.15</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>30</td>\n",
+       "      <td>Mayo</td>\n",
+       "      <td>US</td>\n",
+       "      <td>38.8876</td>\n",
+       "      <td>-76.5119</td>\n",
+       "      <td>84.99</td>\n",
+       "      <td>36</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6.91</td>\n",
+       "      <td>clear sky</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    City_ID            City Country      Lat       Lng  Max Temp  Humidity  \\\n",
+       "4         4  Cabo San Lucas      MX  22.8909 -109.9124     75.99        53   \n",
+       "5         5     Tikaitnagar      IN  26.9500   81.5833     94.01        10   \n",
+       "10       10          Avarua      CK -21.2078 -159.7750     80.60        83   \n",
+       "12       12           Kieta      PG  -6.2167  155.6333     78.49        80   \n",
+       "15       15        Belmonte      BR -15.8631  -38.8828     82.40        65   \n",
+       "16       16   Kanniyakumari      IN   8.0833   77.5667     83.82        78   \n",
+       "20       20         Rikitea      PF -23.1203 -134.9692     76.03        71   \n",
+       "21       21           Lahij      YE  13.1667   44.5833     82.56        56   \n",
+       "26       26      Butaritari      KI   3.0707  172.7902     82.44        76   \n",
+       "30       30            Mayo      US  38.8876  -76.5119     84.99        36   \n",
+       "\n",
+       "    Cloudiness  Wind Speed Current Description  \n",
+       "4            1        5.75           clear sky  \n",
+       "5           14        3.22          few clouds  \n",
+       "10          20        6.91          few clouds  \n",
+       "12          95        3.22     overcast clouds  \n",
+       "15          40        9.22    scattered clouds  \n",
+       "16          45       13.67    scattered clouds  \n",
+       "20          19        9.24          few clouds  \n",
+       "21          69        7.47       broken clouds  \n",
+       "26         100        9.15     overcast clouds  \n",
+       "30           1        6.91           clear sky  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 3. Filter the city_data_df DataFrame using the input statements to create a new DataFrame using the loc method.\n"
+    "# 3. Filter the city_data_df DataFrame using the input statements to create a new DataFrame using the loc method.\n",
+    "preferred_cities_df = city_data_df.loc[(city_data_df[\"Max Temp\"] <= max_temp) & \\\n",
+    "                                      (city_data_df[\"Max Temp\"] >= min_temp)]\n",
+    "preferred_cities_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City_ID                256\n",
+       "City                   256\n",
+       "Country                256\n",
+       "Lat                    256\n",
+       "Lng                    256\n",
+       "Max Temp               256\n",
+       "Humidity               256\n",
+       "Cloudiness             256\n",
+       "Wind Speed             256\n",
+       "Current Description    256\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 4a. Determine if there are any empty rows.\n"
+    "# 4a. Determine if there are any empty rows.\n",
+    "preferred_cities_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City_ID                0\n",
+       "City                   0\n",
+       "Country                0\n",
+       "Lat                    0\n",
+       "Lng                    0\n",
+       "Max Temp               0\n",
+       "Humidity               0\n",
+       "Cloudiness             0\n",
+       "Wind Speed             0\n",
+       "Current Description    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preferred_cities_df.isnull().sum()"
    ]
   },
   {
@@ -76,7 +467,19 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'clean_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-c260f30d15c9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# 5a. Create DataFrame called hotel_df to store hotel names along with city, country, max temp, and coordinates.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mhotel_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclean_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"City\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Country\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Max Temp\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Current Description\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Lat\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Lng\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# 5b. Create a new column \"Hotel Name\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mhotel_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Hotel Name\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'clean_df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# 5a. Create DataFrame called hotel_df to store hotel names along with city, country, max temp, and coordinates.\n",
     "hotel_df = clean_df[[\"City\", \"Country\", \"Max Temp\", \"Current Description\", \"Lat\", \"Lng\"]].copy()\n",
@@ -88,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.9"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
