coding and figure for search params.

--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "576     25.54        58         100       10.25  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
      "output_type": "stream",
      "text": [
       "What is the minimum temperature you would like for your trip? 75\n",
-      "What is the maximum temperature you would like for your trip? 90\n"
+      "What is the maximum temperature you would like for your trip? 100\n"
      ]
     }
    ],
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
        "31     84.22        38           0        7.58  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +652,7 @@
    "source": [
     "# Filter the dataset to find the cities that fit the criteria.\n",
     "preferred_cities_df = city_data_df.loc[(city_data_df[\"Max Temp\"] <= max_temp) & \\\n",
-    "                                      (city_data_df[\"Max Temp\"] >= min_temp)].dropna()\n",
+    "                                      (city_data_df[\"Max Temp\"] >= min_temp)].dropna(how=\"any\")\n",
     "preferred_cities_df.head(10)"
    ]
   },
