--- a/Vacation_Search/Vacation_Search.ipynb
+++ b/Vacation_Search/Vacation_Search.ipynb
@@ -1160,12 +1160,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 8a. Create the output File (CSV)\n",
-    "output_data_file = \"WeatherPy_Vaction.csv\"\n",
+    "output_data_file = \"WeatherPy_Vacation.csv\"\n",
     "\n",
     "# 8b. Export the City_Data into a csv\n",
     "clean_hotel_df.to_csv(output_data_file, index_label=\"City_ID\")"
@@ -1225,13 +1225,6 @@
     "# 11b. Display the figure\n",
     "fig"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
