--- a/Vacation_Itinerary/Vacation_Itinerary.ipynb
+++ b/Vacation_Itinerary/Vacation_Itinerary.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,11 +31,123 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Current Description</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Cabo San Lucas</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>75.99</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>22.8909</td>\n",
+       "      <td>-109.9124</td>\n",
+       "      <td>Hotel Tesoro Los Cabos</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Tikaitnagar</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>94.01</td>\n",
+       "      <td>few clouds</td>\n",
+       "      <td>26.9500</td>\n",
+       "      <td>81.5833</td>\n",
+       "      <td>Suraj Verma S/O Om Prakash Verma</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Avarua</td>\n",
+       "      <td>CK</td>\n",
+       "      <td>80.60</td>\n",
+       "      <td>few clouds</td>\n",
+       "      <td>-21.2078</td>\n",
+       "      <td>-159.7750</td>\n",
+       "      <td>Paradise Inn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Kieta</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>78.49</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>-6.2167</td>\n",
+       "      <td>155.6333</td>\n",
+       "      <td>Uruna Bay Retreat</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Belmonte</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>82.40</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "      <td>-15.8631</td>\n",
+       "      <td>-38.8828</td>\n",
+       "      <td>Pousada Monte Carmelo O Pão</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City_ID            City Country  Max Temp Current Description      Lat  \\\n",
+       "0        4  Cabo San Lucas      MX     75.99           clear sky  22.8909   \n",
+       "1        5     Tikaitnagar      IN     94.01          few clouds  26.9500   \n",
+       "2       10          Avarua      CK     80.60          few clouds -21.2078   \n",
+       "3       12           Kieta      PG     78.49     overcast clouds  -6.2167   \n",
+       "4       15        Belmonte      BR     82.40    scattered clouds -15.8631   \n",
+       "\n",
+       "        Lng                        Hotel Name  \n",
+       "0 -109.9124            Hotel Tesoro Los Cabos  \n",
+       "1   81.5833  Suraj Verma S/O Om Prakash Verma  \n",
+       "2 -159.7750                      Paradise Inn  \n",
+       "3  155.6333                 Uruna Bay Retreat  \n",
+       "4  -38.8828       Pousada Monte Carmelo O Pão  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 1. Read the WeatherPy_vacation.csv into a DataFrame.\n",
-    "# vacation_df = pd.read_csv(\"Vacation_Search/WeatherPy_vacation.csv\")\n",
-    "# vacation_df.head()"
+    "vacation_df = pd.read_csv(\"../Vacation_Search/WeatherPy_Vacation.csv\")\n",
+    "vacation_df.head()"
    ]
   },
   {
@@ -46,31 +158,56 @@
    "source": [
     "# 2. Using the template add the city name, the country code, the weather description and maximum temperature for the city.\n",
     "info_box_template = \"\"\"\n",
-    "\n",
+    "<dl>\n",
+    "<dt>Hotel Name</dt><dd>{Hotel Name}</dd>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "<dt>Current Conditions</dt><dd>{Current Description} & {Max Temp} °F</dd>\n",
+    "</dl>\n",
     "\"\"\"\n",
     "\n",
     "# 3a. Get the data from each row and add it to the formatting template and store the data in a list.\n",
-    "hotel_info = [info_box_template.format(**row) for index, row in clean_hotel_df.iterrows()]\n",
+    "hotel_info = [info_box_template.format(**row) for index, row in vacation_df.iterrows()]\n",
     "\n",
     "# 3b. Get the latitude and longitude from each row and store in a new DataFrame.\n",
-    "locations = clean_hotel_df[[\"Lat\", \"Lng\"]]"
+    "locations = vacation_df[[\"Lat\", \"Lng\"]]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3dfdf5838b584a66807dd62161c42acf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 4a. Add a marker layer for each city to the map.\n",
+    "locations = vacation_df[[\"Lat\", \"Lng\"]]\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "\n",
+    "fig.add_layer(marker_layer)\n",
     "\n",
     "# 4b. Display the figure\n",
-    "\n"
+    "fig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,61 +215,198 @@
     "# 5. Create DataFrames for each city by filtering the 'vacation_df' using the loc method. \n",
     "# Hint: The starting and ending city should be the same city.\n",
     "\n",
-    "vacation_start = vacation_df.loc[]\n",
-    "vacation_end = vacation_df.loc[]\n",
-    "vacation_stop1 = vacation_df.loc[]\n",
-    "vacation_stop2 = vacation_df.loc[] \n",
-    "vacation_stop3 = vacation_df.loc[] "
+    "vacation_start = vacation_df.loc[vacation_df[\"City\"] == \"Taxco\"]\n",
+    "vacation_end = vacation_df.loc[vacation_df[\"City\"] == \"Taxco\"]\n",
+    "vacation_stop1 = vacation_df.loc[vacation_df[\"City\"] == \"Acapulco\"]\n",
+    "vacation_stop2 = vacation_df.loc[vacation_df[\"City\"] == \"Bucerias\"] \n",
+    "vacation_stop3 = vacation_df.loc[vacation_df[\"City\"] == \"Concepcion Del Oro\"] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start: (18.55, -99.6), End: (18.55, -99.6)\n",
+      "Stop 1: (16.8634, -99.8901), Stop 2: (20.75, -105.3333), Stop 3: (24.6333, -101.4167)\n"
+     ]
+    }
+   ],
    "source": [
     "# 6. Get the latitude-longitude pairs as tuples from each city DataFrame using the to_numpy function and list indexing.\n",
-    "start = \n",
-    "end = \n",
-    "stop1 = \n",
-    "stop2 = \n",
-    "stop3 = "
+    "start = vacation_start[\"Lat\"].to_numpy()[0], vacation_start[\"Lng\"].to_numpy()[0]\n",
+    "end = vacation_start[\"Lat\"].to_numpy()[0], vacation_start[\"Lng\"].to_numpy()[0]\n",
+    "stop1 = vacation_stop1[\"Lat\"].to_numpy()[0], vacation_stop1[\"Lng\"].to_numpy()[0]\n",
+    "stop2 = vacation_stop2[\"Lat\"].to_numpy()[0], vacation_stop2[\"Lng\"].to_numpy()[0]\n",
+    "stop3 = vacation_stop3[\"Lat\"].to_numpy()[0], vacation_stop3[\"Lng\"].to_numpy()[0]\n",
+    "\n",
+    "print(f'Start: {start}, End: {end}')\n",
+    "print(f'Stop 1: {stop1}, Stop 2: {stop2}, Stop 3: {stop3}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fb08145765a940db82e2ce1c3934c694",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 7. Create a direction layer map using the start and end latitude-longitude pairs,\n",
     "# and stop1, stop2, and stop3 as the waypoints. The travel_mode should be \"DRIVING\", \"BICYCLING\", or \"WALKING\".\n",
-    "\n"
+    "fig = gmaps.figure()\n",
+    "city_itinerary_driving = gmaps.directions_layer(\n",
+    "        start, end, waypoints=[stop1, stop2, stop3],\n",
+    "        travel_mode= \"DRIVING\")\n",
+    "\n",
+    "fig.add_layer(city_itinerary_driving)\n",
+    "fig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Current Description</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>605</td>\n",
+       "      <td>Taxco</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>89.01</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>18.5500</td>\n",
+       "      <td>-99.6000</td>\n",
+       "      <td>Hotel Boutique Pueblo Lindo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>452</td>\n",
+       "      <td>Acapulco</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>84.20</td>\n",
+       "      <td>few clouds</td>\n",
+       "      <td>16.8634</td>\n",
+       "      <td>-99.8901</td>\n",
+       "      <td>HS Hotsson Smart Acapulco</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>499</td>\n",
+       "      <td>Bucerias</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>78.80</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>20.7500</td>\n",
+       "      <td>-105.3333</td>\n",
+       "      <td>Villa del Palmar Flamingos Beach Resort &amp; Spa ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>548</td>\n",
+       "      <td>Concepcion Del Oro</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>79.20</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>24.6333</td>\n",
+       "      <td>-101.4167</td>\n",
+       "      <td>HOTEL HACIENDA SAN JAVIER</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City_ID                City Country  Max Temp Current Description      Lat  \\\n",
+       "0      605               Taxco      MX     89.01           clear sky  18.5500   \n",
+       "1      452            Acapulco      MX     84.20          few clouds  16.8634   \n",
+       "2      499            Bucerias      MX     78.80     overcast clouds  20.7500   \n",
+       "3      548  Concepcion Del Oro      MX     79.20           clear sky  24.6333   \n",
+       "\n",
+       "        Lng                                         Hotel Name  \n",
+       "0  -99.6000                        Hotel Boutique Pueblo Lindo  \n",
+       "1  -99.8901                          HS Hotsson Smart Acapulco  \n",
+       "2 -105.3333  Villa del Palmar Flamingos Beach Resort & Spa ...  \n",
+       "3 -101.4167                          HOTEL HACIENDA SAN JAVIER  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 8. To create a marker layer map between the four cities.\n",
     "#  Combine the four city DataFrames into one DataFrame using the concat() function.\n",
-    "itinerary_df = pd.concat([],ignore_index=True)\n",
+    "itinerary_df = pd.concat([vacation_start, vacation_stop1, vacation_stop2, vacation_stop3],ignore_index=True)\n",
     "itinerary_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 9 Using the template add city name, the country code, the weather description and maximum temperature for the city. \n",
     "info_box_template = \"\"\"\n",
-    "\n",
+    "<dl>\n",
+    "<dt>Hotel Name</dt><dd>{Hotel Name}</dd>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "<dt>Current Conditions</dt><dd>{Current Description} & {Max Temp} °F</dd>\n",
+    "</dl>\n",
     "\"\"\"\n",
     "\n",
     "# 10a Get the data from each row and add it to the formatting template and store the data in a list.\n",
@@ -144,13 +418,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a947f70e294c41a2a1aecf8ced253463",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 11a. Add a marker layer for each city to the map.\n",
+    "locations = itinerary_df[[\"Lat\", \"Lng\"]]\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
     "\n",
-    "# 11b. Display the figure\n"
+    "fig.add_layer(marker_layer)\n",
+    "\n",
+    "# 11b. Display the figure\n",
+    "fig"
    ]
   },
   {
